# zr_ren

./: .gitignore  LICENSE  imgui.ini  meson.build
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
ren/: CMakeLists.txt
ren/libs/glad/: CMakeLists.txt
ren/libs/glad/include/glad/: glad.h
ren/libs/glad/src/: glad.c
ren/shaders/: lighting.frag  point_shadow_depth.vert  shadows.vert  skybox.frag  texture.frag
ren/src/: camera.hpp  cubemap.hpp  input.hpp  log.hpp  main.cpp  material.hpp  mesh.hpp  object.cpp  object.hpp  resource_manager.hpp  scene.hpp  shader.cpp  shader.hpp  shader_material.hpp
rt/: Makefile  camera.hpp  color.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp
shaders/: fstexture.frag  fstexture.vert  material.frag  material.vert  point_shadow_depth.geom  shadow_volume.frag  shadow_volume.geom  shadow_volume.vert  shadows.frag  simple_depth.vert  solid_color.frag  vs_complete.frag  vs_first_pass.vert
src/: camera.hpp  color.cpp  color.hpp  gl_util.hpp  hittable.cpp  hittable.hpp  input.hpp  log.cpp  log.hpp  main.cpp  material.cpp  material.hpp  mesh.hpp  object.cpp  object.hpp  primitive.hpp  ray.hpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.hpp  util.hpp  vec3.hpp  window.hpp
src/raytracing/: material.hpp  meson.build
src/renderers/: material.cpp  material.hpp  raytracing.cpp  raytracing.hpp  shadow_mapping.cpp  shadow_mapping.hpp  shadow_volume.cpp  shadow_volume.hpp  solid.cpp  solid.hpp
src/renderers/raytracing/: camera.hpp  color.cpp  color.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  material.hpp  ray.hpp  sphere.cpp  sphere.hpp  vec3.hpp
subprojects/ren/: imgui.ini  meson.build
subprojects/ren/shaders/: depth_debug.frag  lighting.vert  material.vert  point_shadow_depth.frag  point_shadow_depth.geom  skybox.vert  texture.vert
subprojects/ren/src/: cubemap.hpp  gl_util.hpp  log.cpp  log.hpp  main.cpp  material.hpp  mesh.hpp  object.cpp  object.hpp  primitive.hpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_material.hpp  texture.hpp  window.hpp
subprojects/ren/src/renderers/: shadow_mapping.cpp  shadow_mapping.hpp
subprojects/rt/: .gitignore  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  main.cpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
subprojects/rt/.cache/clangd/index/: camera.hpp.48878F47D54B199D.idx  color.hpp.24F31A4154D8F8E9.idx  hittable.hpp.1F3EF69A5ECD814F.idx  hittable_list.hpp.DDFC2929CDFCB405.idx  main.cpp.89FBF73E9EFB1247.idx  material.hpp.BB8C6F46F2FA06B8.idx  ray.hpp.0766C5271023C455.idx  rtweekend.hpp.C3F9C2376B101485.idx  sphere.hpp.9BFFE8B07DA43A52.idx  stb_image.h.F9321B4922755151.idx  stb_image_write.h.3E17103D9DB11994.idx  vec3.hpp.E7998CF9735073A4.idx
